changing the order for Netflify deploy

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section class="intro-section">
         <div class="container">
-            <div class="">
+            <div>
                 <h1>The headphones of the future</h1>
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Optio reprehenderit repellendus, illo minima vitae provident placeat voluptas excepturi quis tempora.</p>
                 <a href="#" class="btn">Read More</a>
